tests/NormalTests/paczka1/fuzzy1/52596909.err
Error in line 1: EB5 S785 1,1
Error in line 4: ZzJduwzqGR6 A168 92,7
Error in line 7: EB5 A386 53,5
Error in line 10: EB5 A168 91,9
Error in line 8: ZzJduwzqGR6 A386 2,4
Error in line 30: A386 A168 23,0
